fix white line in clippath anim

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,9 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
+.will-change-clip {
+  will-change: clip-path;
+}
 
 :root {
   --real-vh: 100vh;
